--- a/index.html
+++ b/index.html
@@ -9,7 +9,34 @@
 </head>
 
 <body>
+    <!-- HEADER SECTION START -->
+    <header class="main-header">
+        <div class="logo">
+            Portfolio
+        </div>
+        <input id="menu-button" class="menu-button" type="checkbox" name="menu-button">
+        <label for="menu-button">
+            <span class="hamburger"></span>
+        </label>
+        <nav class="nav">
+            <ul class="nav-list">
+                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">About me</a></li>
+                <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
+            </ul>
+        </nav>
+    </header>
+    <!-- HEADER SECTION ENDS -->
 
+    <!-- INTRO SECTION START -->
+    <section class="into" id="home">
+        <h1 class="section__title section__title--intro">Hello, <strong>I am Aduragbemi</strong></h1>
+        <p class="section__subtitle section__subtitle--intro">Frontend developer</p>
+        <span class="section__subtitle--design">Designer</span>
+        <img class="intro__img" src="/imgs/portrait.jpg" alt="">
+    </section>
+    <!-- INTRO SECTION ENDS -->
 </body>
 
 </html>
