--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-    <!-- HEADER SECTION START -->
+    <!-- HEADER SECTION STARTS -->
     <header class="main-header">
         <div class="logo">
             Portfolio
         </div>
         <input id="menu-button" class="menu-button" type="checkbox" name="menu-button">
-        <label for="menu-button">
+        <label class="menu-container" for="menu-button">
             <span class="hamburger"></span>
         </label>
         <nav class="nav">
@@ -29,7 +29,7 @@
     </header>
     <!-- HEADER SECTION ENDS -->
 
-    <!-- INTRO SECTION START -->
+    <!-- INTRO SECTION STARTS -->
     <section class="into" id="home">
         <h1 class="section__title section__title--intro">Hello, <strong>I am Aduragbemi</strong></h1>
         <p class="section__subtitle section__subtitle--intro">Frontend developer</p>
@@ -37,6 +37,34 @@
         <img class="intro__img" src="/imgs/portrait.jpg" alt="">
     </section>
     <!-- INTRO SECTION ENDS -->
+
+    <!-- MY SERVICES STARTS -->
+    <section class="my-services" id="services">
+        <h2 class="section__title section__title--services">What I Do</h2>
+        <div class="services">
+            <div class="service">
+                <h3>UI/UX</h3>
+                <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime commodi quibusdam corrupti laudantium
+                    ratione minima.</P>
+            </div>
+            <div class="service">
+                <h3>Front End</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi mollitia ea voluptatum veritatis
+                    vitae nobis.</p>
+            </div>
+            <div class="service">
+                <h3>Digital Marketing</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis impedit earum, dolore quasi
+                    beatae nobis.</p>
+            </div>
+            <div class="service">
+                <h3>Graphic Design</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum, quaerat ad voluptates minima
+                    odit?</p>
+            </div>
+        </div>
+    </section>
+    <!-- MY SERVICES ENDS -->
 </body>
 
 </html>
