--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aduragbemi Koleosho | Portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
@@ -58,6 +61,7 @@
                     beatae nobis.</p>
             </div>
             <div class="service">
+                <a class="btm" href="#work">My Project</a>
                 <h3>Graphic Design</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum, quaerat ad voluptates minima
                     odit?</p>
@@ -65,6 +69,83 @@
         </div>
     </section>
     <!-- MY SERVICES ENDS -->
+
+    <!-- ABOUT ME STARTS -->
+    <section class="about-me" id="about">
+        <h2 class="section__title section__title--about">Who I Am</h2>
+        <p class="section__subtitle section__subtitle--about">Frontend developer and Designer base in magboro</p>
+        <div class="about__body">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa modi repellat maiores, earum numquam,
+                inventore veniam cumque quaerat sunt qui nesciunt ratione, autem optio nulla? Saepe distinctio soluta
+                vero quis?</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus quos perspiciatis, provident deserunt nemo
+                vel sit cupiditate minima quasi sed!</p>
+        </div>
+        <img class="about-me__img" src="/imgs/headshot.png" alt="my image">
+    </section>
+    <!-- ABOUT ME ENDS -->
+
+    <!-- MY WORK STARTS -->
+    <section class="my__work" id="project">
+        <h2 class="section__title">My Project</h2>
+        <p class="section__subtitle section__subtitle--work">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <div class="portfolio">
+            <div class="portfolio__item">
+                <h3 class="section__title--portfolio">UI Design</h3>
+                <p class="section__subtitle--portfolio">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="" class="btn btn--portfolio" target="_blank">View Project</a>
+            </div>
+            <div class="portfolio__item">
+                <h3 class="section__title--portfolio">Backend Developer</h3>
+                <p class="section__subtitle--portfolio">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="" class="btn btn--portfolio" target="_blank">View Project</a>
+            </div>
+            <div class="portfolio__item">
+                <h3 class="section__title--portfolio">Project Supervisor</h3>
+                <p class="section__subtitle--portfolio">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="" class="btn btn--portfolio" target="_blank">View Project</a>
+            </div>
+            <div class="portfolio__item">
+                <h3 class="section__title--portfolio">Data Manager</h3>
+                <p class="section__subtitle--portfolio">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="" class="btn btn--portfolio" target="_blank">View Project</a>
+            </div>
+            <div class="portfolio__item">
+                <h3 class="section__title--portfolio">Finance Manager</h3>
+                <p class="section__subtitle--portfolio">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="" class="btn btn--portfolio" target="_blank">View Project</a>
+            </div>
+            <div class="portfolio__item">
+                <h3 class="section__title--portfolio">Auditor</h3>
+                <p class="section__subtitle--portfolio">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <a href="" class="btn btn--portfolio" target="_blank">View Project</a>
+            </div>
+        </div>
+    </section>
+    <!-- MY WORK ENDS -->
+
+    <!-- SCROLL TO TOP -->
+    <button id="scrollToTopBtn" type="button" onclick="scrollToTop()"><i class="fa-solid fa-arrow-up"></i></button>
+
+    <!-- FOOTER START -->
+    <footer class="footer">
+        <a href="mailto:yowaaded" class="footer-link">yowaaded@gmail.com</a>
+        <ul class="social-list">
+            <li class="social-list__item">
+                <a href="#"><i class="fa-brands fa-codepen"></i></a>
+            </li>
+            <li class="social-list__item">
+                <a href="#"><i class="fa-brands fa-dribbble"></i></a>
+            </li>
+            <li class="social-list__item">
+                <a href="#"><i class="fa-brands fa-behance"></i></a>
+            </li>
+            <li class="social-list__item">
+                <a href="#"><i class="fa-brands fa-github"></i></a>
+            </li>
+        </ul>
+    </footer>
+    <script src="/js/index.js"></script>
 </body>
 
 </html>
