--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     beatae nobis.</p>
             </div>
             <div class="service">
-                <a class="btm" href="#work">My Project</a>
+                <a class="btn" href="#work">My Project</a>
                 <h3>Graphic Design</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error illum, quaerat ad voluptates minima
                     odit?</p>
