--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <span class="hamburger"></span>
         </label>
         <nav class="nav">
-            <ul class="nav-list">
-                <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">About me</a></li>
-                <li class="nav-item"><a href="#" class="nav-link">Projects</a></li>
+            <ul class="nav__list">
+                <li class="nav__item"><a href="#" class="nav__link">Home</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Services</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">About me</a></li>
+                <li class="nav__item"><a href="#" class="nav__link">Projects</a></li>
             </ul>
         </nav>
     </header>
